<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_table"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/value_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/roll_table"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill"
            app:layout_constraintBottom_toTopOf="@+id/value_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/value_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="0123456789"
            android:ems="3"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_skill" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/roll_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/advantage_table"
        app:layout_constraintStart_toEndOf="@+id/value_table"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/roll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/roll_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="0123456789"
            android:ems="3"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_roll" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/advantage_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roll_table"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_advantage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advantage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/advantage_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_advantage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_modifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/modifier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roll_table" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/modifier_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_modifier">

        <EditText
            android:id="@+id/modifier_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="-0123456789"
            android:ems="3"
            android:gravity="center"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:importantForAutofill="no"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:longClickable="false"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/SL_modifier_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/SL_modifier_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:digits="-0123456789"
            android:ems="4"
            android:gravity="center"
            android:inputType="phone"
            android:importantForAutofill="no"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:clickable="false"
            android:cursorVisible="false"
            android:longClickable="false"
            android:text="@string/zeroSL"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/modifier_field"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/result_field"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:clickable="false"
        android:cursorVisible="false"
        android:digits="0123456789"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:longClickable="false"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:textIsSelectable="false"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modifier_table" />

    <FrameLayout
        android:id="@+id/modifiersFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_field" />
</androidx.constraintlayout.widget.ConstraintLayout>