<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/swordImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/sword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_sword" />

        <ImageView
            android:id="@+id/shieldImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/shield"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bowImage"
            app:layout_constraintStart_toEndOf="@+id/swordImage"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shield" />

        <ImageView
            android:id="@+id/bowImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/bow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_bow"
            app:tint="@color/purple_primary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_skill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/value_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="0123456789"
            android:ems="3"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_skill" />

        <TextView
            android:id="@+id/text_roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/roll"
            app:layout_constraintBottom_toTopOf="@+id/roll_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/value_field" />

        <EditText
            android:id="@+id/roll_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:digits="0123456789"
            android:ems="3"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_roll" />

        <TextView
            android:id="@+id/text_modifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/modifier"
            app:layout_constraintBottom_toTopOf="@+id/SL_modifier_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roll_field"
            tools:ignore="NotSibling" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_modifier">

            <EditText
                android:id="@+id/modifier_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="-0123456789"
                android:ems="3"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/SL_modifier_field"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/SL_modifier_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:digits="-0123456789"
                android:ems="3"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/modifier_field"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/result_field"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:clickable="false"
            android:digits="0123456789"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:longClickable="false"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textIsSelectable="false"
            android:textSize="22sp"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_modifier" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/range0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/range1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_range0" />

    <ImageView
        android:id="@+id/range1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/range2"
        app:layout_constraintStart_toEndOf="@+id/range0"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_range1" />

    <ImageView
        android:id="@+id/range2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/range3"
        app:layout_constraintStart_toEndOf="@+id/range1"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_range2"
        app:tint="@color/purple_primary" />

    <ImageView
        android:id="@+id/range3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/range4"
        app:layout_constraintStart_toEndOf="@+id/range2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_range3" />

    <ImageView
        android:id="@+id/range4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/range3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_range4" />


    <ImageView
        android:id="@+id/size0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/size1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_size0" />

    <ImageView
        android:id="@+id/size1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/size2"
        app:layout_constraintStart_toEndOf="@+id/size0"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_size1" />

    <ImageView
        android:id="@+id/size2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/size3"
        app:layout_constraintStart_toEndOf="@+id/size1"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_size2" />

    <ImageView
        android:id="@+id/size3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/size4"
        app:layout_constraintStart_toEndOf="@+id/size2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_size3"
        app:tint="@color/purple_primary" />

    <ImageView
        android:id="@+id/size4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/size5"
        app:layout_constraintStart_toEndOf="@+id/size3"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_size4" />

    <ImageView
        android:id="@+id/size5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/size6"
        app:layout_constraintStart_toEndOf="@+id/size4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_size5" />

    <ImageView
        android:id="@+id/size6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/size5"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_size6" />


    <ImageView
        android:id="@+id/obstacle0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@+id/obstacle1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_bush" />

    <ImageView
        android:id="@+id/obstacle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/obstacle0"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:srcCompat="@drawable/ic_wall" />

</androidx.constraintlayout.widget.ConstraintLayout>